--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "proxy": "http://localhost:7000/",
   "dependencies": {
+    "@date-io/moment": "^2.14.0",
     "@emotion/core": "^10.3.1",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
-    "@mui/material": "^5.7.0",
+    "@mui/x-date-pickers": "^5.0.0-alpha.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
